# backend/controllers/tasks.controller.js
@@ -3,26 +3,27 @@ const Tasks = db.tasks
 
 exports.findAll = async (req, res) => {
 	const userId = req.auth.userId;
+	console.log(userId);
 	const tasks = await Tasks.findAll({ where: { userId }, include: 'category' });
 	return res.status(200).json(tasks);
 }
 
 exports.create = async (req, res) => {
-	const title = req.body.title;
-	const categoryId = req.body.category;
+	const { title, categoryId, content, priority, done, expiration } = req.task;
 	const userId = req.auth.userId;
-	const content = req.body.content;
-	const priority = req.body.priority;
 	try {
-		const work = await Tasks.create({
+		const task = await Tasks.create({
 			title,
 			content,
 			priority,
 			categoryId,
-			userId
+			userId,
+			done,
+			expiration
 		})
-		return res.status(201).json(work)
+		return res.status(201).json(task)
 	} catch (err) {
+		console.log(err)
 		return res.status(500).json({ error: new Error('Something went wrong') })
 	}
 }
@@ -35,3 +36,31 @@ exports.delete = async (req, res) => {
 		return res.status(500).json({ error: new Error('Something went wrong') })
 	}
 }
+
+exports.update = async (req, res) => {
+	const taskId = req.params.id;
+	const userId = req.auth.userId;
+	const { title, categoryId, content, priority, done, expiration } = req.body;
+
+	try {
+		// Vérifier d'abord si la tâche existe
+		const existingTask = await Tasks.findOne({ where: { id: taskId, userId } });
+		if (!existingTask) {
+			return res.status(404).json({ error: 'Task not found' });
+		}
+
+		// Mettre à jour la tâche
+		await Tasks.update(
+			{ title, categoryId, content, priority, done, expiration },
+			{ where: { id: taskId, userId } }
+		);
+
+		// Récupérer la tâche mise à jour
+		const updatedTask = await Tasks.findByPk(taskId);
+
+		return res.status(200).json(updatedTask);
+	} catch (err) {
+		console.error(err);
+		return res.status(500).json({ error: 'Something went wrong' });
+	}
+};
