# backend/routes/tasks.routes.js
@@ -6,6 +6,7 @@ const taskCtrl = require('../controllers/tasks.controller');
 
 router.post('/', auth, checkTasks, taskCtrl.create);
 router.get('/', auth, taskCtrl.findAll);
+router.put('/:id', auth, taskCtrl.update); // Route ajoutée pour mettre à jour une tâche
 router.delete('/:id', auth, taskCtrl.delete);
 
 module.exports = router;
